# Agentic_AI_system

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: __init__.py  cli_test.py  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: __init__.py  actions.py  analyze.py  chat.py  ingest.py
backend/app/models/: __init__.py  enums.py  schemas.py
backend/app/services/: history_manager.py  sambanova_client.py
backend/app/services/analysis/: __init__.py  action_generator.py  context_engine.py
backend/app/services/ingestion/: __init__.py  audio_processor.py  code_ingester.py  (+1 more)
backend/app/utils/: __init__.py  code_parser.py  telemetry.py
backend/backend/data/: history.json
backend/backend/database/: 7eeacc11-e802-4479-a906-6a89af01d0ea.json
database/: 2026-02-27.json  2026-02-28.json  2026-03-01.json
docs/: test.md
extension/: package.json
extension/src/: extension.ts  types.ts  webviewContent.ts
frontend/: index.html  main.py  style.css
frontend/components/: code_viewer.py  diff_renderer.py  header.py  status_messages.py
frontend/js/: api.js  app.js  events.js  router.js  state.js  templates.js
frontend/pages/: Actions_Fixes.py  Analysis.py  Audio_Transcription.py  Home.py  Screenshot_Analysis.py
frontend/utils/: api.py  helpers.py  session_state.py
streamlit_legacy/components/: chat_interface.py
streamlit_legacy/pages/: Code_Analysis.py  Screenshot_Analysis.py  Settings.py
streamlit_legacy/utils/: api.py  session.py
(+3 files in other folders)
