[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sambanova-coder-agent"
version = "0.1.0"
description = "A coder agent using SambaNova"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.6",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "openai==1.10.0",
    "chromadb==0.4.22",
    "sentence-transformers==2.2.2",
    "pillow==10.2.0",
    "pytesseract==0.3.10",
    "tree-sitter==0.23.2",
    "tree-sitter-python==0.23.2",
    "streamlit",
    "streamlit-cropper",
    "tenacity==8.2.3",
    "httpx==0.26.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "numpy<2.0.0",
    "scikit-learn",
]

[tool.setuptools]
package-dir = {"" = "backend"}
packages = ["app"]

[tool.pyright]
include = ["backend"]
extraPaths = ["backend"]
executionEnvironments = [
  { root = "backend" }
]
venvPath = "."
venv = "env"

[tool.pyre]
source_directories = ["backend"]
binary = "env/bin/pyre"


[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]
